# UniversalKnowledgeGraghBuilder

./: .env.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_CN.md  USAGE.md  app.py  cli.py  demo.py  gui.py  main.py  prompts_documentation.md  pyproject.toml  requirements.txt  run_app.ps1  run_pipeline.ps1  test_basic.py  test_complete.py  test_gui.py  test_visualization.py
config/: config.yaml  domains.yaml  settings.yaml
data/demo/: sample_chemicals.csv
data/processed/: enriched_computer_hardware_knowledge.csv  enriched_pc_hardware_database.csv  personal_computer_hardware_enriched.csv  traditional_chinese_medicine_material_enriched.csv
data/reference_data/: 国家危化品清单.csv
examples/: cardiovascular_system.txt  python_ecosystem.txt
modules/: llm_json_parser.py  pipeline_manager.py  universal_enricher.py
modules/data_cleaning/: __init__.py  data_processor.py  process_chemicals.py
modules/data_enrichment/: simple_enricher.py
modules/data_enrichment/api/: __init__.py  api_client.py  gemini_grounding.py
modules/data_enrichment/config/: __init__.py  api_config.py  api_configs.json  column_mapper.py  config_manager.py  intelligence_config.json  path_config.py
modules/data_enrichment/core/: __init__.py  api_client_factory.py  base.py  (+9 more)
modules/graph_construction/: attribute_splitter.py  data_processor.py  neo4j_exporter.py  text_normalizer.py
modules/post_processing/: 111.py  chemical_processor.py  chemical_processor_backup.py  chemical_processor_fixed.py  chemical_processor_temp.py  enhanced_file_processor.py  entity_processor.py  multi_format_importer.py  neo4j_importer.py  vector_query_optimizer.py  verify_import.py  verify_relationships.py
src/kg_builder/: __init__.py  config.py  extractor.py  graph.py  visualizer.py
(+12 files in other folders)
