[project]
name = "universal-knowledge-graph-builder"
version = "0.1.0"
description = "A modern, visual knowledge graph construction tool that extracts information from unstructured data using LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SiderLock"}
]
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "tkinter-tooltip>=2.1.0",
    "pyvis>=0.3.2",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
